--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-coverage>4.0
-Django>=1.11
-psycopg2>=2.7.1
+appdirs==1.4.3
+coverage==4.3.4
+Django==1.11
+elasticsearch==5.3.0
+elasticsearch-dsl==5.2.0
+packaging==16.8
+psycopg2==2.7.1
+pyparsing==2.2.0
+python-dateutil==2.6.0
+pytz==2017.2
+six==1.10.0
+urllib3==1.21
