--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ Django==1.11.3
 elasticsearch==5.4.0
 elasticsearch-dsl==5.3.0
 packaging==16.8
-psycopg2==2.7.1
+psycopg2>=2.7.1
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.2
-six==1.10.0
+six>=1.10.0
 urllib3==1.22
 celery==4.1.0
