--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "select2": "^4.0.3",
     "echarts-wordcloud": "https://github.com/ecomfe/echarts-wordcloud.git#^1.0.2",
     "echarts": "^3.6.2",
-    "leaflet-polylinedecorator": "^1.3.2"
+    "leaflet-polylinedecorator": "^1.3.2",
+    "Leaflet.MakiMarkers": "^3.1.0"
   }
 }
