--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,6 @@
     "echarts-wordcloud": "https://github.com/ecomfe/echarts-wordcloud.git#^1.0.2",
     "echarts": "^3.6.2",
     "leaflet-polylinedecorator": "^1.3.2",
-    "Leaflet.MakiMarkers": "^3.1.0"
+    "leaflet": "^1.2.0"
   }
 }
