--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "leaflet-polylinedecorator": "^1.3.2",
     "leaflet": "^1.2.0",
     "echarts": "^3.7.2",
-    "bootstrap-toggle": "^2.2.2"
+    "bootstrap-toggle": "^2.2.2",
+    "leaflet-control-topcenter": "https://github.com/FCOO/leaflet-control-topcenter.git#^2.0.1"
   }
 }
