--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 appdirs==1.4.3
 coverage==4.4.1
 Django==1.11.6
-elasticsearch==5.4.0
-elasticsearch-dsl==5.3.0
+elasticsearch==6.1.1
+elasticsearch-dsl==6.1.0
 packaging==16.8
 psycopg2>=2.7.1
 pyparsing==2.2.0
@@ -13,3 +13,5 @@ urllib3==1.22
 celery==4.1.0
 django-js-reverse==0.7.3
 mock==2.0.0
+django-rq==1.0.1
+rq==0.10
