--- a/bower.json
+++ b/bower.json
@@ -22,9 +22,7 @@
     "leaflet-polylinedecorator": "^1.6.0",
     "leaflet": "^1.3.1",
     "echarts": "^4.0.4",
-    "leaflet-control-topcenter": "https://github.com/FCOO/leaflet-control-topcenter.git#^2.0.1",
-    "Leaflet.EasyButton": "^2.3.0",
-    "leaflet-control-window": "*",
-    "bootstrap-colorpicker": "^2.5.1"
+    "bootstrap-colorpicker": "^2.5.1",
+    "BeautifyMarker": "https://github.com/marslan390/BeautifyMarker.git"
   }
 }
