--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,7 @@ media/
 node_modules/
 bowerapp/static/components/
 fondefVizServer/keys/
+fondefVizServer/logs/
 static/*
 bowerapp/static/components/*
 bowerapp/static/js/reverse.js
