--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,5 @@ django-debug-toolbar==1.9.1
 django-debug-panel==0.8.3
 python-decouple==3.1
 django-crontab==0.7.1
+ddtrace==0.14.1
+datadog==0.22.0
