--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
 appdirs==1.4.3
-coverage==4.4.1
-Django==1.11.6
-elasticsearch==6.1.1
-elasticsearch-dsl==6.1.0
+coverage==4.5.1
+Django==1.11.15
+elasticsearch==6.3.1
+elasticsearch-dsl==6.2.1
 packaging==16.8
-psycopg2>=2.7.1
+psycopg2==2.7.5
+psycopg2-binary==2.7.5
 pyparsing==2.2.0
 python-dateutil==2.6.1
-pytz==2018.4
-six>=1.10.0
 urllib3==1.22
-django-js-reverse==0.7.3
+django-js-reverse==0.8.2
 mock==2.0.0
 django-rq==1.2.0
 rq==0.12
-django-debug-toolbar==1.9.1
+django-debug-toolbar==1.10.1
 django-debug-panel==0.8.3
 python-decouple==3.1
 django-crontab==0.7.1
