--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "echarts": "^4.0.4",
     "bootstrap-colorpicker": "^2.5.1",
     "BeautifyMarker": "https://github.com/marslan390/BeautifyMarker.git",
-    "Leaflet.Sync": "leaflet.sync#^0.2.2"
+    "Leaflet.Sync": "leaflet.sync#^0.2.2",
+    "bootstrap-datepicker": "^1.9.0"
   }
 }
