--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "BeautifyMarker": "https://github.com/marslan390/BeautifyMarker.git",
     "Leaflet.Sync": "leaflet.sync#^0.2.2",
     "bootstrap-datepicker": "^1.9.0",
-    "trix": "https://github.com/basecamp/trix.git"
+    "trix": "https://github.com/basecamp/trix.git",
+    "faq-template": "https://github.com/CodyHouse/faq-template.git"
   }
 }
