--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "Leaflet.Sync": "leaflet.sync#^0.2.2",
     "bootstrap-datepicker": "^1.9.0",
     "trix": "https://github.com/basecamp/trix.git",
-    "faq-template": "https://github.com/CodyHouse/faq-template.git"
+    "faq-template": "https://github.com/CodyHouse/faq-template.git",
+    "cody-house": "https://github.com/CodyHouse/codyhouse-framework.git"
   }
 }
