--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "dataUploader"]
 	path = dataUploader
 	url = https://github.com/SmartcitySantiagoChile/dataUploader
+    branch = adaptation/FondefVizProject
