--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: python
 python:
   - "3.7"
+services:
+  - elasticsearch
+  - redis
+env:
+  -DJANGO=3.0.4 DB=postgres
 install:
   - pip install -r requirements.txt
 script:
