--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ env:
   -DJANGO=3.0.4 DB=postgres
 install:
   - pip install -r requirements.txt
+before_script:
+  -touch /logs/file.log
 script:
   - python manage.py test
