--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ env:
 install:
   - pip install -r requirements.txt
 before_script:
-  - mkdir logs && touch file.log
+  - mkdir "/home/travis/build/SmartcitySantiagoChile/fondefVizServer/fondefVizServer/logs/" && touch file.log
 script:
   - python manage.py test
