--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
   -DJANGO=3.0.4 DB=postgres
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
 before_script:
   - psql -c 'create database fondefdev;' -U postgres
   - mkdir "/home/travis/build/SmartcitySantiagoChile/fondefVizServer/fondefVizServer/logs/" && touch file.log
