--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "dataUploader"]
-	path = dataUploader1
+	path = dataUploader
 	url = https://github.com/SmartcitySantiagoChile/dataUploader
     branch = adaptation/FondefVizProject
