--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -58,6 +58,8 @@ services:
 
   cache:
     image: redis:latest
+    ports:
+      - "6379:6379"
     networks:
       - cache_network
       - elastic
@@ -66,6 +68,8 @@ services:
     image: postgres:9.6-alpine
     volumes:
       - postgres_fondefdev_data:/var/lib/postgresql/data/
+    ports:
+      - "5432:5432"
     env_file:
       - ./docker_db_env
     networks:
